Fixes issue with Search icon being low visibility

--- a/src/app/searchbar/searchbar.component.css
+++ b/src/app/searchbar/searchbar.component.css
@@ -3,6 +3,9 @@ form{
     display: grid;
     grid-template-columns: 1fr;
 }
+.material-symbols-outlined{
+    color: var(--md-sys-color-outline-variant-light);
+}
 @media screen and (max-width:1000px){
     form{
         width: 100%;
